--- a/WdServerLib/build.gradle
+++ b/WdServerLib/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'com.android.library'
 }
 
-def VERSION_CODE = "102"
-def VERSION_NAME = "1.2"
+def VERSION_CODE = "103"
+def VERSION_NAME = "1.3"
 
 android {
     publishNonDefault true
@@ -27,6 +27,7 @@ android {
         debug {
             buildConfigField "String", "VERSION_NAME", "\"" + VERSION_NAME + "\""
             buildConfigField "int", "VERSION_CODE", VERSION_CODE
+            debuggable true
         }
     }
     compileOptions {
