--- a/WdServerLib/build.gradle
+++ b/WdServerLib/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'com.android.library'
 }
 
-def VERSION_CODE = "103"
-def VERSION_NAME = "1.3"
+def VERSION_CODE = 10400
+def VERSION_NAME = "1.4.0"
 
 android {
     publishNonDefault true
@@ -12,7 +12,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 30
-
+        versionCode=VERSION_CODE
+        versionName="\"" + VERSION_NAME + "\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -20,13 +21,13 @@ android {
     buildTypes {
         release {
             buildConfigField "String", "VERSION_NAME", "\"" + VERSION_NAME + "\""
-            buildConfigField "int", "VERSION_CODE", VERSION_CODE
+            buildConfigField "int", "VERSION_CODE", VERSION_CODE.toString()
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
             buildConfigField "String", "VERSION_NAME", "\"" + VERSION_NAME + "\""
-            buildConfigField "int", "VERSION_CODE", VERSION_CODE
+            buildConfigField "int", "VERSION_CODE", VERSION_CODE.toString()
             debuggable true
         }
     }
