--- a/WdServerLib/build.gradle
+++ b/WdServerLib/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
 
-def VERSION_CODE = 10603
-def VERSION_NAME = "1.6.3"
+def VERSION_CODE = 10606
+def VERSION_NAME = "1.6.6"
 
 android {
     compileSdkVersion 30
@@ -32,6 +33,21 @@ android {
         targetCompatibility JavaVersion.VERSION_11
     }
 }
+
+afterEvaluate {
+    publishing {
+        publications {
+// Creates a Maven publication called "release".
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.github.gregko'
+                artifactId = 'Mini-WebDAV-server-for-Android'
+                version = "$VERSION_NAME"
+            }
+        }
+    }
+}
+
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
